@@ -1172,16 +1172,16 @@ def norm(qdict, params):
     return dic
 
 
-@extract.add('rates_by_src')
-def extract_rates_by_src(dstore, what):
+@extract.add('mean_rates_by_src')
+def extract_mean_rates_by_src(dstore, what):
     """
-    Extract the rates_by_src information.
-    Example: http://127.0.0.1:8800/v1/calc/30/extract/rates_by_src?site_id=0&imt=PGA&poe=.001
+    Extract the mean_rates_by_src information.
+    Example: http://127.0.0.1:8800/v1/calc/30/extract/mean_rates_by_src?site_id=0&imt=PGA&poe=.001
     """
     qdict = parse(what)
-    dset = dstore['rates_by_src/array']
+    dset = dstore['mean_rates_by_src/array']
     oq = dstore['oqparam']
-    src_id = dstore['rates_by_src/src_id'][:]
+    src_id = dstore['mean_rates_by_src/src_id'][:]
     [imt] = qdict['imt']
     [poe] = qdict['poe']
     [site_id] = qdict.get('site_id', ['0'])
