@@ -656,13 +656,13 @@ class ClassicalTestCase(CalculatorTestCase):
     def test_case_82(self):
         # two mps, only one should be collapsed and use reqv
         self.run_calc(case_82.__file__, 'job.ini')
-        [f1] = export(('rates_by_src', 'csv'), self.calc.datastore)
-        self.assertEqualFiles('expected/rates_by_src.csv', f1)
+        [f1] = export(('mean_rates_by_src', 'csv'), self.calc.datastore)
+        self.assertEqualFiles('expected/mean_rates_by_src.csv', f1)
 
     def test_case_84(self):
         # three sources are identical except for their source_ids.
         # one is collapsed using reqv, while the other two are specified 
         # as 'not collapsed' in the job file field reqv_ignore_sources
         self.run_calc(case_84.__file__, 'job.ini')
-        [f] = export(('rates_by_src', 'csv'), self.calc.datastore)
+        [f] = export(('mean_rates_by_src', 'csv'), self.calc.datastore)
         self.assertEqualFiles('expected/rbs.csv', f)
